--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
       const NO_BUTTON_MESSAGES = [
         'No',
         'Are you sure?',
-        'Pookie please',
+        'Say Sike rn..',
         "Don't do this to me :(",
-        "You're breaking my heart",
+        "WHAT ABOUT TIFFY AND PEDRO IN SPAIN",
         "I'm gonna cry...",
       ];
 
@@ -142,7 +142,7 @@
       yesButton.addEventListener('click', () => {
         imageDisplay.src = IMAGE_PATHS[IMAGE_PATHS.length - 1];
         imageDisplay.alt = ALT_TEXTS[ALT_TEXTS.length - 1];
-        valentineQuestion.textContent = 'Yayyy!! :3';
+        valentineQuestion.textContent = 'YAYAYAY you are mine mine mine';
         responseButtons.style.display = 'none';
 
         // Heart-shaped confetti for a valentine theme
@@ -160,4 +160,5 @@
   </script>
 </body>
 </html>
+
 
