--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
 
       const NO_BUTTON_MESSAGES = [
         'No',
-        'Are you sure?',
-        'Say Sike rn..',
+        '..Still no?',
+        'WHAT ABOUT TIFFY AND PEDRO IN SPAIN',
         "Don't do this to me :(",
-        "WHAT ABOUT TIFFY AND PEDRO IN SPAIN",
+        "Say sike right now",
         "I'm gonna cry...",
       ];
 
@@ -160,5 +160,6 @@
   </script>
 </body>
 </html>
+
 
 
