--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         id="imageDisplay"
         src="./images/image1.gif"
         alt="Cute kitten with flowers"
-        class="rounded-md h-[300px] object-cover"
+        class="rounded-md w-full max-w-xs object-cover"
       />
       <h1 id="valentineQuestion" class="text-4xl font-bold italic text-[#bd1e59] my-4">
         Pedro...Will you be my Valentine?
